--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^12.0.0",
     "lucide-react": "^0.475.0",
+    "mysql2": "^3.14.2",
     "next": "^15.3.2",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
