--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "date-fns": "^4.1.0",
     "firebase": "^12.0.0",
     "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "mysql2": "^3.14.2",
     "next": "^15.3.2",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.62.0",
     "same-runtime": "^0.0.1",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
